--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@ Bootstrap 5 HTML CSS Template
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p>As a Dormitory Assistant, I cultivated robust leadership skills through the lens of diverse cultures within the residential community. This role enabled me to effectively navigate and appreciate the intricacies of cultural differences, fostering an inclusive environment for all residents. Also, as an active member of both the Basketball and Soccer teams, I garnered invaluable experience collaborating within a team setting. 
+                                                </p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
                                                     <!-- <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong> -->
