--- a/index.html
+++ b/index.html
@@ -333,7 +333,9 @@ Bootstrap 5 HTML CSS Template
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p> During my time serving in the Korean Army, I embraced the responsibility of leadership as a squad leader. Through effective communication and decisive decision-making, I navigated challenges with resilience and ensured that every member felt valued and empowered to contribute their best. My experience as a squad leader instilled in me invaluable lessons in leadership, adaptability, and the profound impact of cohesive teamwork, shaping me into a more capable and driven individual.
+
+                                                </p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
                                                     <!-- <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong> -->
@@ -365,7 +367,9 @@ Bootstrap 5 HTML CSS Template
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p>During my tenure as the leader of the Front-end Team within the Like Lion Club, I spearheaded a dynamic group of aspiring front-end developers in harnessing the power of technology to drive impactful change. Together, we tackled complex projects with precision and creativity, leveraging our collective expertise to craft intuitive user interfaces and elevate the user experience. Through our dedication and teamwork, we not only delivered successful front-end solutions but also cultivated a community of passionate learners eager to push the boundaries of web development. My experience with Like Lion has not only deepened my technical skills but also reinforced the value of leadership, collaboration, and continuous learning in achieving shared goals.
+
+                                                </p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
                                                     <!-- <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong> -->
@@ -390,13 +394,15 @@ Bootstrap 5 HTML CSS Template
                                                 <img src="images/OSU.png" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
-                                                    <h6 class="text-black mb-0">Oreogon State University</h6>
+                                                    <h6 class="text-black mb-0">Oregon State University</h6>
                                                     <em class="text-black">NMC/DCA Major</em>
                                                 </div>
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p>As a Digital Communication Art major, I have delved deep into the multifaceted realm of media and visual communication, honing my skills through a diverse array of coursework. From mastering the intricacies of screen programming to exploring the artistry of motion design and animation, I've developed a versatile toolkit that encompasses both technical proficiency and creative innovation. Also, I am driven to leverage my expertise to engage audiences and push the boundaries of digital communication in impactful ways.
+
+                                                </p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
                                                     <!-- <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong> -->
@@ -477,7 +483,7 @@ Bootstrap 5 HTML CSS Template
                                 <em class="text-white d-block mb-4">Contact</em>
 
                                 <strong class="text-white">
-                    
+                                    Phone: 541-286-2796  
                                     Email:tvjhy98@gamil.com
                                 </strong>
 
