--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Bootstrap 5 HTML CSS Template
                             </ul>
 
                             <div class="ms-lg-3">
-                                <a class="btn custom-btn custom-border-btn" href="resume/resume.pdf">
+                                <a class="btn custom-btn custom-border-btn" href="resume/resume1.pdf">
                                     Resume
                                     <i class="bi-arrow-up-right ms-2"></i>
                                 </a>
