--- a/index.html
+++ b/index.html
@@ -188,6 +188,28 @@ Bootstrap 5 HTML CSS Template
                             </a>
                             </div>
 
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <a href="https://youtu.be/NOa0q94Ry7k">
+                                <div class="team-block-wrap">
+                                    <div class="team-block-info d-flex flex-column">
+                                        <div class="d-flex mt-auto mb-3">
+                                            <h6 class="text-white mb-0">3D Animation</h6>
+
+                                            <p class="badge ms-4"><em>Maya</em></p>
+                                            <p class="badge ms-4"><em>Unity</em></p>
+                                        </div>
+
+                                        <p class="text-white mb-0">Ball and Box animation created by Maya</p>
+                                    </div>
+
+                                    <div class="team-block-image-wrap">
+                                        
+                                            <img src="images/Ani.png" class="team-block-image img-fluid" alt="">
+                                    </div>
+                                </div>
+                            </a>
+                            </div>
+
                             <div class="col-lg-3 col-md-6 col-12 mb-4">
                                 <a href="https://www.youtube.com/watch?v=ygcuDMAMS0w&ab_channel=HojoonYoon">
                                 <div class="team-block-wrap">
@@ -312,6 +334,12 @@ Bootstrap 5 HTML CSS Template
                                                         <i class="bi-star-fill"></i>
                                                         <i class="bi-star-fill"></i>
                                                         <i class="bi-star-fill"></i>
+
+
+
+
+
+
                                                         <i class="bi-star"></i> -->
                                                     </div>
                                                 </div>
